# MuseScore

./: .gitignore  .gitmodules  .gitnexusignore  .gitnexusrc  CLAUDE.md  dev.ps1  lint_qml.py  ninja_build.bat  ninja_build.ps1
.github/workflows/: check_testflow.yml  check_testflow_gui.yml
.opencode/plans/: 1781677107117-curious-mountain.md
buildscripts/tools/: cmake_wrapper.bat
docs/superpowers/plans/: 2026-06-28-command-palette-action-audit.md
docs/superpowers/specs/: 2026-05-24-accessible-score-navigation-feedback-design.md  2026-05-24-accessible-unit-editing-design.md  2026-06-01-score-view-braille-input-design.md  2026-06-06-braille-six-key-score-input-design.md  2026-06-28-command-palette-action-audit-design.md
openspec/changes/add-dev-wrapper/: proposal.md
share/testflowscripts/: CMakeLists.txt  TC11_CommandPaletteDialog.js  TC12_PlaybackSpeedDialog.js  TC13_SetTempoUpdate.js  TC14_CommandPaletteAnnounce.js
src/appshell/: appshellmodule.cpp  iappshellconfiguration.h
src/braille/: CMakeLists.txt  ibrailleconfiguration.h  inotationbraille.h
src/braille/internal/: brailleconfiguration.cpp  brailleconfiguration.h  brailleinput.cpp  brailleinput.h  notationbraille.cpp  notationbraille.h
src/braille/qml/MuseScore/Braille/: BrailleView.qml  braillemodel.cpp
src/braille/tests/: CMakeLists.txt  braille_tests.cpp
src/notation/: inotationinteraction.h  inotationnoteinput.h
src/notationscene/: notationscenemodule.cpp
src/playback/: iplaybackcontroller.h  playbackmodule.cpp
tools/action-audit/: README.md  audit_actions.py  requirements.txt  test_audit_actions.py
tools/braille-installer/: Build-MuseScore-Braille-Package.ps1  Install-MuseScore-Braille.ps1  OPERATOR-NOTES.txt  README-FIRST.txt  Uninstall-MuseScore-Braille.ps1
(+74 files in other folders)
